--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
   background-color: #1b1b1b;
   width: 85%;
   margin: 0 auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
   border-radius: 8px;
 }
 
@@ -223,4 +228,26 @@ body {
 
 .project-card p {
   color: #ccc;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  background-color: #1a1a1a;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: opacity 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+.scroll-to-top:hover {
+  background-color: #9c9c9c;
 }
