--- a/style.css
+++ b/style.css
@@ -172,6 +172,10 @@ body {
 }
 
 .info {
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 5rem;
 }
 
